# hackathon-yeti

./: .gitignore  .gitmodules  Makefile  README.md  sdkconfig  sdkconfig.old
demos/coreMQTT/: mqtt_demo_yeti_cam.c
main/: CMakeLists.txt  aws_clientcredential.h  aws_clientcredential_keys.h  core_mqtt_config.h  esp_tls_transport.c  esp_tls_transport.h  from_afr.c  mqtt_demo_mutual_auth_config.h  mqtt_demo_yeti_cam.c
vendors/espressif/boards/esp32/: CMakeLists.txt
vendors/espressif/boards/esp32/aws_demos/: sdkconfig.defaults
vendors/espressif/boards/esp32/aws_demos/config_files/: mqtt_demo_mutual_auth_config.h
